# dni-mcp-server

./: pyproject.toml  server.py
